[package]
name = "example"
version = "0.1.0"
authors = ["Duy Do <juchiast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { git = "https://github.com/seanmonstar/warp", rev = "fb64f24b6126efc618ca04a29acf1a7d4737c33c" }
tokio = "0.2.0-alpha.6"
serde = { version = "1", features = ["derive"] }
tokio-postgres = "0.5.0-alpha.1"
